--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.2</version>
+		<version>3.1.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.treinaweb</groupId>
@@ -26,6 +26,29 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>            
+			<groupId>org.springframework.boot</groupId>            
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>        
+		</dependency>        
+		
+		<dependency>            
+			<groupId>org.springframework.boot</groupId>            
+			<artifactId>spring-boot-devtools</artifactId>            
+			<scope>runtime</scope>        
+		</dependency>        
+		
+		<dependency>            
+			<groupId>org.springframework.boot</groupId>            
+			<artifactId>spring-boot-starter-data-jpa</artifactId>        
+		</dependency>        
+		
+		<dependency>            
+			<groupId>mysql</groupId>            
+			<artifactId>mysql-connector-java</artifactId>            
+			<scope>runtime</scope> 
+			<version>8.0.32</version>       
 		</dependency>
 	</dependencies>
 
