--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/twclientes?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/twclientes?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=twclient
 spring.datasource.password=root_password
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
-# Naming strategy
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
